2004-03-04  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* glue/Makefile.am:
	* glue/makefile.win32: added thread-notify.o

	* glue/thread-notify.c: handles pipe creation/read/write/close for
	ThreadNotify.

	* gtk/ThreadNotify.cs: P/Invoke the thread-notify code instead of libc
	functions.

2004-02-26  Mike Kestner  <mkestner@ximian.com>

	* configure.in : tagged 0.17 and bumped cvs version.

2004-02-26  Mike Kestner  <mkestner@ximian.com>

	* atk/Atk.metadata : hide some funky api
	* atk/atk-api.xml : regen

2004-02-26  Mike Kestner  <mkestner@ximian.com>

	* gnome/GtkSharp.* : move to Gnome namespace
	* gnome/CanvasProxy.cs : update event handler namespaces
	* gnome/voidObject*.cs : internalize

2004-02-24  Mike Kestner  <mkestner@ximian.com>

	* pango/AttrIterator.custom : manually implement SList method.
	* pango/GlyphItem.custom : manually implement SList method.
	* pango/Layout.custom : manually implement SList method.
	* pango/Pango.metadata : hide some SList methods.
	* pango/pango-api.xml : regen.

2004-02-23  Mike Kestner  <mkestner@ximian.com>

	* pango/Pango.metadata : mark some out params on Layout.
	* pango/pango-api.xml : regen
	[fixes #54720]

2004-02-23  Thiago Milczarek Sayão  <sayao@brturbo.com>

	* gtk/TextBuffer.custom : add TextIter parm to InsertWithTags method.

2004-02-21  Mike Kestner  <mkestner@ximian.com>

	* pango/Pango.metadata : mark some out params on Layout.
	* pango/pango-api.xml : regen
	[fixes #54696]

2004-02-21  Mike Kestner  <mkestner@ximian.com>

	* pango/Pango.metadata : mark some out params on ParseMarkup.
	* pango/pango-api.xml : regen
	[fixes #54695]

2004-02-20  Mike Kestner  <mkestner@ximian.com>

	* gdk/Gdk.metadata : hide NoExpose, Client, Setting, WindowState, 
	and Proximity events.
	* gdk/EventClient.cs : glue-based manual implementation.
	* gdk/EventClient.custom : kill
	* gdk/EventNoExpose.custom : kill
	* gdk/EventProximity.cs : glue-based manual implementation.
	* gdk/EventProximity.custom : kill