@@ -20,7 +20,6 @@ BASESOURCES = 			\
 	selectiondata.c		\
 	slist.c			\
 	style.c			\
-	thread-notify.c		\
 	time_t.c		\
 	type.c			\
 	value.c			\
