@@ -22,7 +22,6 @@ GLUE_OBJS = \
         selectiondata.o         \
         slist.o                 \
         style.o                 \
-	thread-notify.o		\
         time_t.o                \
         type.o                  \
         value.o                 \
