@@ -1,3 +1,12 @@
+2004-03-06  Gonzalo Paniagua Javier <gonzalo@ximian.com>
+
+	* glue/Makefile.am:
+	* glue/makefile.win32:
+	* glue/thread-notify.c: dropped.
+
+	* gtk/ThreadNotify.cs: use just Idle.Add, which is what the deprecated
+	gda_input_add does. No more P/Invoke here.
+
 2004-03-04  Gonzalo Paniagua Javier <gonzalo@ximian.com>
 
 	* glue/Makefile.am:
